Add npm start script

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Simple API to get airports",
   "main": "src/index.js",
   "scripts": {
+    "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
