--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node src/index.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "Tim Marinin <mt@marinin.xyz>",
+  "license": "MIT",
   "dependencies": {
     "cors": "^2.8.3",
     "express": "^4.15.3"
